<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/detail_img"
    tools:context=".ui.DetailPlaceActivity">

    <ToggleButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/btn_switch_bookmark"
        android:textOff=""
        android:textOn=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.919"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="410dp"
        android:layout_height="480dp"
        android:background="@drawable/bg_detail"
        app:cardCornerRadius="65dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="350dp"
            android:layout_height="92dp"
            android:background="@drawable/bg_input_field"
            android:paddingTop="10dp"
            app:cardCornerRadius="25dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_nav"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/destiname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/destinationName"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.031" />

            <TextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_baseline_star_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.538"
                app:layout_constraintStart_toEndOf="@+id/OperationDay"
                app:layout_constraintTop_toTopOf="@+id/OperationDay"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/rate2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:gravity="center"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/rating"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/rating"
                app:layout_constraintTop_toTopOf="@+id/rating"
                app:layout_constraintVertical_bias="0.0"
                tools:text="@string/rate2" />

            <TextView
                android:id="@+id/OperationDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/day"
                android:textColor="@color/green_600"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.031"
                app:layout_constraintStart_toEndOf="@+id/textOpration"
                app:layout_constraintTop_toTopOf="@+id/textOpration"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textOpration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/operation"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.13"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.657" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textReview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Review"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.299"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
            app:layout_constraintVertical_bias="0.043" />

        <TextView
            android:id="@+id/textovrviw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ovrview"
            android:textColor="@color/main_theme"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textReview"
            app:layout_constraintEnd_toStartOf="@+id/textReview"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textReview"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/descdetail"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btn_nav"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.003"
            app:layout_constraintStart_toStartOf="@+id/textovrviw"
            app:layout_constraintTop_toBottomOf="@+id/textovrviw"
            app:layout_constraintVertical_bias="0.121" />

        <TextView
            android:id="@+id/descdtl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_nav"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintVertical_bias="0.0"
            tools:text="@string/descdtl" />

        <Button
            android:id="@+id/btn_nav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40sp"
            android:layout_marginEnd="40sp"
            android:background="@drawable/bg_button"
            android:text="@string/nav"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.946" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>